Fix login button visibility, resolve CSS warnings, and implement motor edit/toggle status

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ input:where([type=button]),
 input:where([type=reset]),
 input:where([type=submit]) {
     -webkit-appearance: button;
+    appearance: button;
     background-color: transparent;
     background-image: none
 }
@@ -256,6 +257,7 @@ progress {
 
 [type=search] {
     -webkit-appearance: textfield;
+    appearance: textfield;
     outline-offset: -2px
 }
 
@@ -342,8 +344,7 @@ img,
 object,
 svg,
 video {
-    display: block;
-    vertical-align: middle
+    display: block
 }
 
 img,
